# Multitarget-tracker

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  MTTrackingConfig.cmake.in  Makefile  MouseExample.h  README.md  TODO  VideoExample.cpp  VideoExample.h  cmake_install.cmake  defines.h  demo.py  fly_detection_studentdave.m  main.cpp  multi_fly_tracker_studentdave.m  nms.h  setup.py  vs_garbage_del.bat
async_detector/: AsyncDetector.cpp  AsyncDetector.h  CMakeLists.txt  Queue.h  main.cpp
cars_counting/: CMakeLists.txt  CarsCounting.cpp  CarsCounting.h  main.cpp
example/: CMakeLists.txt  CarsCounting.cpp  CarsCounting.h  FileLogger.h  MotionDetectorExample.h  MouseExample.h  VideoExample.cpp  VideoExample.h  cvatAnnotationsGenerator.h  examples.h  main.cpp
graph/GTL/include/GTL/: 1.txt  GTL.h  Makefile.am  Makefile.in  bfs.h  biconnectivity.h  bid_dijkstra.h  bin_heap.h  components.h  debug.h  dfs.h  dijkstra.h  edge.h  edge_data.h  edge_map.h  embedding.h  fm_partition.h  gml_parser.h  gml_scanner.h  graph.h  maxflow_ff.h  maxflow_pp.h  maxflow_sap.h  min_tree.h  ne_map.h  node.h  node_data.h  node_map.h  planarity.h  pq_node.h  pq_tree.h  ratio_cut_partition.h  st_number.h  topsort.h  version.h
graph/GTL/src/: GTL.dsw  GTL.sln  GTL_dynamic.vcproj  GTL_static.dsp  GTL_static.vcproj  Makefile.am  Makefile.in  bellman_ford.cpp  bfs.cpp  biconnectivity.cpp  bid_dijkstra.cpp  components.cpp  debug.cpp  dfs.cpp  dijkstra.cpp  edge.cpp  embedding.cpp  fm_partition.cpp  gml_parser.cpp  gml_scanner.cpp  graph.cpp  maxflow_ff.cpp  maxflow_pp.cpp  maxflow_sap.cpp  min_tree.cpp  node.cpp  planarity.cpp  pq_node.cpp  pq_tree.cpp  ratio_cut_partition.cpp  st_number.cpp
src/: CMakeLists.txt  defines.h
src/Detector/: BackgroundSubtract.cpp  BackgroundSubtract.h  BaseDetector.cpp  BaseDetector.h  CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  MotionDetector.cpp  MotionDetector.h  OCVDNNDetector.cpp  OCVDNNDetector.h  ONNXTensorRTDetector.cpp  ONNXTensorRTDetector.h  PedestrianDetector.cpp  PedestrianDetector.h  SSDMobileNetDetector.cpp  SSDMobileNetDetector.h  YoloDarknetDetector.cpp  YoloDarknetDetector.h  YoloDetector.cpp  YoloDetector.h  YoloTensorRTDetector.cpp  YoloTensorRTDetector.h
src/Detector/Subsense/: BackgroundSubtractorLBSP.cpp  BackgroundSubtractorLBSP.h  BackgroundSubtractorLOBSTER.cpp  BackgroundSubtractorLOBSTER.h  BackgroundSubtractorSuBSENSE.cpp  BackgroundSubtractorSuBSENSE.h  DistanceUtils.h  LBSP.cpp  LBSP.h  LICENSE.txt
src/Detector/darknet/: CMakeLists.txt  convolutional_kernels.cu  gettimeofday.c  gettimeofday.h  http_stream.h  im2col_kernels.cu  unistd.h
src/Detector/darknet/include/: yolo_v2_class.hpp
src/Detector/darknet/src/: activation_kernels.cu  blas.c  blas_kernels.cu  dark_cuda.c  data.c  http_stream.cpp  image_opencv.cpp  layer.c  list.c  parser.c  softmax_layer.c  yolo.c  yolo_console_dll.cpp  yolo_layer.c  yolo_v2_class.cpp
src/Detector/pedestrians/: c4-pedestrian-detector.cpp  c4-pedestrian-detector.h
src/Detector/tensorrt_onnx/: API.h  CMakeLists.txt  DFINE_bb.hpp  DFINE_is.hpp  RFDETR_bb.hpp  RFDETR_is.hpp  YoloONNX.cpp  YoloONNX.hpp  YoloONNXv10_bb.hpp  YoloONNXv11_bb.hpp  YoloONNXv11_instance.hpp  YoloONNXv11_obb.hpp  YoloONNXv13_bb.hpp  YoloONNXv26_bb.hpp  YoloONNXv26_instance.hpp  YoloONNXv26_obb.hpp  YoloONNXv5_bb.hpp  YoloONNXv6_bb.hpp  YoloONNXv7_bb.hpp  YoloONNXv7_instance.hpp  YoloONNXv8_bb.hpp  YoloONNXv8_instance.hpp  YoloONNXv8_obb.hpp  YoloONNXv9_bb.hpp  class_detector.cpp  class_detector.h
src/Detector/tensorrt_onnx/cmake/: FindTensorRT.cmake
src/Detector/tensorrt_onnx/common/: common.h  safeCommon.h  sampleDevice.cpp  sampleDevice.h  sampleEngines.cpp  sampleEngines.h  sampleInference.cpp  sampleInference.h  sampleOptions.cpp  sampleOptions.h  sampleUtils.cpp
src/Detector/tensorrt_yolo/: CMakeLists.txt  DFINE_bb.hpp  RFDETR_bb.hpp  RFDETR_is.hpp  YoloONNX.cpp  YoloONNX.hpp  YoloONNXv10_bb.hpp  YoloONNXv11_bb.hpp  YoloONNXv11_instance.hpp  YoloONNXv11_obb.hpp  YoloONNXv12_bb.hpp  YoloONNXv5_bb.hpp  YoloONNXv6_bb.hpp  YoloONNXv7_bb.hpp  YoloONNXv7_instance.hpp  YoloONNXv8_bb.hpp  YoloONNXv8_instance.hpp  YoloONNXv8_obb.hpp  YoloONNXv9_bb.hpp  calibrator.cpp  calibrator.h  chunk.cu  chunk.h  class_detector.cpp  class_detector.h  class_timer.hpp  class_yolo_detector.hpp  decodeTensorCUDA.cu  decodeTensorCUDA.h  detect.cu  detect.h  ds_image.cpp  ds_image.h  hardswish.cu  hardswish.h  kernel.cu  mish.cu  mish.h  plugin_factory.cpp  plugin_factory.h  (+16 more)
src/Detector/tensorrt_yolo/cmake/: FindTensorRT.cmake
src/Detector/tensorrt_yolo/common/: BatchStream.h  EntropyCalibrator.h  argsParser.h  buffers.h  common.h  logger.cpp  parserOnnxConfig.h  safeCommon.h  sampleConfig.h  sampleEngines.cpp  sampleEngines.h  (+8 more)
src/Detector/vibe_src/: vibe.cpp  vibe.hpp
src/Tracker/: BaseTracker.cpp  BaseTracker.h  CMakeLists.txt  Ctracker.cpp  Ctracker.h  EmbeddingsCalculator.hpp  Kalman.cpp  Kalman.h  LocalTracker.cpp  LocalTracker.h  ShortPathCalculator.cpp  ShortPathCalculator.h  TrackerSettings.cpp  TrackerSettings.h  VOTTracker.hpp  track.cpp  track.h  trajectory.h
src/Tracker/HungarianAlg/: HungarianAlg.cpp  HungarianAlg.h
src/Tracker/LAPJV_algorithm/: lap.cpp  lap.h
src/Tracker/byte_track/: BYTETracker.cpp  BYTETracker.h  KalmanFilter.cpp  KalmanFilter.h  STrack.cpp  STrack.h  lapjv.cpp  lapjv.h
src/Tracker/dat/: dat_tracker.cpp  dat_tracker.hpp
src/Tracker/graph/: fheap.c  gport.h  mincut.cpp  mincut.h  mwbmatching.cpp  mwbmatching.h  mygraph.cpp  mygraph.h  mytree.cpp  mytree.h
src/Tracker/ldes/: correlation.cpp  correlation.h  fft_functions.cpp  fft_functions.h  fhog.cpp  fhog.hpp  hann.cpp  hann.h  ldes_tracker.cpp  ldes_tracker.h
src/Tracker/muSSP/: Graph.cpp  Graph.h  Node.cpp  Node.h  Sink.cpp  Sink.h
src/Tracker/staple/: fhog.cpp  fhog.h  sse.hpp  staple_tracker.cpp  staple_tracker.hpp
src/common/: defines.h  nms.h  object_types.cpp  object_types.h
src/mtracking/: defines.h  nms.h  object_types.cpp  object_types.h
src/python_bind/: mtracker.cpp  ndarray_converter.cpp  ndarray_converter.h
(+291 files in other folders)
